# blaselaw

./: Cargo.toml  README.md
doc/: book_uncensored.md  dcd.puml
src/: case.rs  main.rs  modifiers.rs  player.rs  team.rs
